2001-09-06  Morten Welinder  <terra@diku.dk>

	* src/main.c (main): Delete.
	(main): Renamed from gnumeric_main.  Return type changed to int.

2001-09-05  Jody Goldberg <jgoldberg@home.com>

	* src/commands.c (cmd_ins_del_colrow) : don't store the clipboard if
	  it on another sheet.

	* src/GNOME_Gnumeric.xml : The magic incantation  that allows us to
	  desensitize toolbars by setting a property on a command of the same
	  namedoesnot work with a menubar, but supplying an 'id' property to
	  the menu appears to do the trick.

	* src/workbook-edit.c (workbook_edit_toolbars_set_sensitive) : set the
	  menubar also.
	(workbook_edit_toolbars_set_sensitive) : add a kludge for bonobo
	  to disable its tendancy to resensitize the undo/redo widgets.
	(workbook_edit_set_sensitive) : decrease the timer so that we don't feel
	  so sluggish.

2001-09-04  Jody Goldberg <jgoldberg@home.com>

	* src/xml-io.c (xml_probe) : accept .xml & .xml.gz

	* src/sheet-object.c (sheet_object_anchor_init) : Actually store the
	  the direction.

	* src/gnumeric-graph.c (gnm_graph_add_vector) : improve handling of
	  failures.

2001-09-03  Jody Goldberg <jgoldberg@home.com>

	* src/value-sheet.c (value_area_get_width) : fix old silliness.
	(value_area_get_height) : ditto.  Handle inverted  mixed mode
	  references.

2001-09-02  Jody Goldberg <jgoldberg@home.com>

	* src/style-condition.h : Qualify the namespace better.

2001-09-02  Jody Goldberg <jgoldberg@home.com>
	For Wayne Schuller <k_wayne@linuxpower.org>

	* src/pattern.c (gnumeric_background_set_pc) : Support gray scale
	  patterns when printing.

2001-09-02  Jody Goldberg <jgoldberg@home.com>

	* src/style-condition.c (style_condition_eval) : Use dependent_eval
	  and add an invariant that ensures that val is only NULL if we have
	  been queued for recalc.

	* src/eval.c (dependent_eval) : split from workbook_recalc.
	(cell_eval) : change return type.  no one was using it.
	(dependent_needs_recalc) : new macro.
